fix keyboard flashing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,11 @@ body {
   opacity: 0.8;
   z-index: 2;
 }
+
+:focus {
+  outline: none;
+}
+
+[contenteditable] {
+  caret-color: transparent;
+}
